--- a/assets/styles.css
+++ b/assets/styles.css
@@ -15,6 +15,16 @@ h1,
 h2 {
   text-align: center;
 }
+h3 {
+  font-family: "Segoe UI";
+  font-weight: 400;
+  text-align: center;
+  padding-top: 0px;
+  color: white;
+  background-color: black;
+  padding: 0 20%;
+  margin-bottom: 5px;
+}
 
 img {
   display: block;
